<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  
 <RelativeLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:background="#ffffff">
  		
  		<!--  Header Starts--> 
			<LinearLayout
			    android:id="@+id/header"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:background="@layout/header_gradient"
			    android:orientation="vertical"
			    android:paddingBottom="5dip"
			    android:paddingTop="5dip" >

			    <ImageView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_horizontal"
			        android:contentDescription="@string/logo_content_description"
			        android:src="@drawable/adkalogo" />
			    
			</LinearLayout>  		 		
  		<!--  Header Ends -->
 		  	
  		<!-- Login Form -->
		<LinearLayout		  
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header"> 
		  
				<TextView
				    android:text="@string/register_label"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="20dp"
				    android:layout_gravity="center"
				    android:textColor="#ffcc00"
					android:textSize="24sp" />	
				
			  	<!--  Fullname Label -->	
			  	<TextView 
			      	android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#372c24"
			  		android:text="@string/fullname_label"/>		  
			  	<EditText
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"
			  		android:singleLine="true"
			  		android:inputType="text"/>				    
		  
			  	<!--  Email Label -->	
			  	<TextView 
			      	android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#372c24"
			  		android:text="@string/email_user_label"/>		  
			  	<EditText
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"
			  		android:singleLine="true"
			  		android:inputType="text"/>
			  
			  	<!--  Password Label -->
			  	<TextView 
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:text="@string/password_label"/>
			  	<EditText 
			  	    android:id="@+id/field_password"
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"
			  		android:singleLine="true"
			  		android:inputType="textPassword"/>
			  	
			  	<!--  Confirm Password Label -->
			  	<TextView 			  	    
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:text="@string/confirm_password_label"/>
			  	<EditText 
			  	    android:id="@+id/field_confirm_password"
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"
			  		android:singleLine="true"
			  		android:inputType="textPassword"/>			  	
			  	
			  	<!--  Account Type Label -->	
			  	<TextView 
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#372c24"
			  		android:text="@string/account_type_label"/>			  
				<Spinner
				    android:id="@+id/acount_type_spinner"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"				    
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />
							  
			  	<!--  State Label -->	
			  	<TextView 
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#372c24"
			  		android:text="@string/state_label"/>			  
				<Spinner
				    android:id="@+id/state_spinner"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"				    
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />	
				    
			  	<!--  City Label -->	
			  	<TextView 
			      	android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:textColor="#372c24"
			  		android:text="@string/city_label"/>			  
				<Spinner
				    android:id="@+id/city_spinner"
			  		android:layout_marginTop="5dp"
			  		android:layout_marginBottom="20dp"				    
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />							  		  			 
			  
	          	<!-- Login button -->
	          	<Button android:id="@+id/btnRegister"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingRight="20dp"
	                android:paddingLeft="20dp"
	                android:layout_gravity="center"	                
	                android:background="#ffcc00"
	                android:textColor="#ffffff"
	                android:layout_marginTop="10dp"
	                android:text="@string/register_label"/>		  
			  		    			  		
			  	<!-- Link to Registration Screen -->
			  	<TextView
			  	    android:id="@+id/link_to_login"
			  		android:layout_width="match_parent"
			  		android:layout_height="wrap_content"
			  		android:layout_marginTop="15dp"
			  		android:text="@string/register_to_login_screen"
			  		android:gravity="center"
			  		android:textSize="18sp"
			  		android:textColor="#ffa500"/>	  		
  		</LinearLayout>
  		<!-- Login Form Ends -->
  		
  </RelativeLayout>
</ScrollView>